tests/paczka2/big_fuzzy/98096413.err
Error in line 4: s6uzdbssaE A659 96,1
Error in line 2: Bh2kx1SMX A659 52,3
Error in line 5: s6uzdbssaE A680 97,2
Error in line 14: s6uzdbssaE A659 960,7
Error in line 30: Bh2kx1SMX A659 55,4
Error in line 31: Bh2kx1SMX A680 2,0
Error in line 22: cCDu571Trg2 A659 257,8
Error in line 55: t9ewdAemq3 A659 57,4
Error in line 50: s6uzdbssaE A680 3,4
Error in line 57: t9ewdAemq3 A559 84,9
Error in line 64: t9ewdAemq3 A680 17,9
Error in line 26: fW6xvO7Y A680 0,8
Error in line 58: cCDu571Trg2 S746 76,1
Error in line 83: A659 A680 92,9
Error in line 80: Ofo1RTK99GI A680 18,5
Error in line 95: Bh2kx1SMX A659 70,	
Error in line 105: Bh2kx1SMX A659 288,2
Error in line 89: fW6xvO7Y S746 60,3
Error in line 115: fW6xvO7Y A559 69,7
Error in line 110: Ofo1RTK99GI S746 248,2
Error in line 107: s6uzdbssaE A680 47,2
Error in line 127: fW6xvO7Y A65: 235,2
Error in line 121: Ofo1RTK99GI A680 46,5
Error in line 126: t9ewdAemq3 A659 65,0
Error in line 133: Ofo1RTK99GI A659 106,08
Error in line 125: fW6xvO7Y A659 71,7
Error in line 137: Ofo1RTK99GI A559 19,30
Error in line 138: s6uzdbssaE A659 -2,6
Error in line 144: Bh2kx1SMX A659 54,9
Error in line 131: Ofo1RTK99GI A659 61,0
Error in line 160: Ofo1RTK99GI A559 301,8
Error in line 169: siuzdbssaE Ai80 43,9
Error in line 157: cCDu571Trg2 A559 17,2
Error in line 176: s6uzdbssaE A680 40,9
Error in line 180: s6uzdbssaE A559 94,6
Error in line 183: t9ewdAemq3 A680 94,7
Error in line 182: s6uzdbssaE S746 74,5
Error in line 205: s6uzdbssaE S746 59,8
Error in line 210: t9ewdAemq3 S746 26,8
Error in line 222: fW6xvO7Y S746 55,9
Error in line 221: t9ewdAemq3 A559 73,7
Error in line 236: A659 S746 93,3
Error in line 237: A659 A559 27,4
Error in line 241: s6uzdbssaE A659 6,0
